fix bug(input border radius on mobile)

--- a/src/components/_UiComponents/TextInput/TextInput.scss
+++ b/src/components/_UiComponents/TextInput/TextInput.scss
@@ -40,6 +40,7 @@
   &__input {
     width: 100%;
     padding: 0 0 16px;
+    border-radius: unset;
     border: none;
     border-bottom: 1px solid var(--color-gray-2);
     transition: border-color .2s ease-in-out;
